# egui_cobs

./: .gitignore  .gitmodules
common/: Cargo.toml
common/src/: cob.rs  lib.rs  num.rs
device/: Cargo.toml  attach.sh  readme.md  rust-toolchain.toml
device/.cargo/: config.toml
device/src/: lib.rs
e_gui/: Cargo.toml
e_gui/src/: bufrecv.rs  conn.rs  lib.rs
